--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "babel-runtime": "^6.26.0",
     "core-js": "^3.6.5",
     "eslint-loader": "^4.0.2",
+    "paypal-checkout": "^4.0.318",
     "vue": "^2.6.11",
     "vue-router": "^3.4.5",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
